--- a/registroAsistencia.html
+++ b/registroAsistencia.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Registro de Asistencia</h1>
+    <div id="detallesReunion"></div>
     <form id="registroForm">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" required>
@@ -15,19 +16,51 @@
     <div id="mensaje"></div>
 
     <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const reunionId = urlParams.get('id');
+        function obtenerParametrosURL() {
+            const urlParams = new URLSearchParams(window.location.search);
+            return {
+                tema: urlParams.get('tema'),
+                fecha: urlParams.get('fecha'),
+                hora: urlParams.get('hora'),
+                objetivo: urlParams.get('objetivo'),
+                tipo: urlParams.get('tipo'),
+                area: urlParams.get('area'),
+                participantes: urlParams.get('participantes')
+            };
+        }
+
+        function mostrarDetallesReunion() {
+            const detalles = obtenerParametrosURL();
+            const detallesDiv = document.getElementById('detallesReunion');
+            
+            if (!detalles.tema) {
+                detallesDiv.innerHTML = '<p>No se encontraron detalles de la reunión.</p>';
+                return;
+            }
+
+            detallesDiv.innerHTML = `
+                <p><strong>Tema:</strong> ${detalles.tema}</p>
+                <p><strong>Fecha:</strong> ${detalles.fecha}</p>
+                <p><strong>Hora:</strong> ${detalles.hora}</p>
+                <p><strong>Objetivo:</strong> ${detalles.objetivo}</p>
+                <p><strong>Tipo:</strong> ${detalles.tipo}</p>
+                <p><strong>Área:</strong> ${detalles.area}</p>
+                <p><strong>Participantes:</strong> ${detalles.participantes}</p>
+            `;
+        }
 
         document.getElementById('registroForm').addEventListener('submit', function(event) {
             event.preventDefault();
             const nombre = document.getElementById('nombre').value;
 
             // Aquí podrías guardar la asistencia en un backend o base de datos
-            console.log(`Reunión ID: ${reunionId}, Asistente: ${nombre}`);
+            console.log(`Asistente: ${nombre}`);
 
             document.getElementById('mensaje').textContent = 'Asistencia registrada.';
             document.getElementById('registroForm').reset();
         });
+
+        window.onload = mostrarDetallesReunion;
     </script>
 </body>
 </html>
