--- a/registroAsistencia.html
+++ b/registroAsistencia.html
@@ -58,6 +58,7 @@
 
             document.getElementById('mensaje').textContent = 'Asistencia registrada.';
             document.getElementById('registroForm').reset();
+			//registro
         });
 
         window.onload = mostrarDetallesReunion;
