--- a/registroAsistencia.html
+++ b/registroAsistencia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Asistencia</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Registro de Asistencia</h1>
